--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@ layout: default
 title: Home
 ---
 
-<div class="blurb">
-	<h1>Hi there, I'm Eugenio Felix!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-</div><!-- /.blurb -->
+<div class="row">
+	<div class="col-md-12">
+		<h1>Hi there, I'm Eugenio Felix!</h1>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vitae placerat dui. Vestibulum pharetra vitae enim et accumsan. Nam pharetra tristique ipsum, nec rutrum diam. Fusce convallis mi quis tellus luctus, sed feugiat libero mattis. Fusce ultrices, turpis non hendrerit cursus, odio diam dignissim quam, id sollicitudin neque diam ut nibh. Maecenas consequat neque lectus, sed fringilla lacus dignissim a. In hac habitasse platea dictumst. Suspendisse quam lectus, faucibus et ligula non, bibendum tristique nisl. In tincidunt pretium dolor eu tincidunt. Etiam mattis enim dolor, at fringilla enim elementum id. Donec imperdiet quam arcu, et imperdiet tellus imperdiet bibendum. Donec semper nisl nec urna pharetra, quis gravida enim efficitur.
+		<p>Vivamus mattis est eget dolor sagittis tristique. Aliquam condimentum urna vel augue varius, non ultricies leo fringilla. Donec placerat a lorem eget feugiat. Nulla eros dui, lobortis eu turpis vel, venenatis bibendum augue. Donec ut ante ut ex semper imperdiet. Suspendisse potenti. Nullam dignissim elit at urna accumsan auctor. Integer malesuada odio leo, nec congue elit volutpat non. Fusce libero felis, vehicula at iaculis eu, volutpat ac justo. In tincidunt hendrerit massa, sed ornare dui finibus quis. Duis blandit bibendum leo id luctus. In sit amet velit et ante semper eleifend eu quis mauris. Nam nulla est, dictum ut felis in, suscipit iaculis libero.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vitae placerat dui. Vestibulum pharetra vitae enim et accumsan. Nam pharetra tristique ipsum, nec rutrum diam. Fusce convallis mi quis tellus luctus, sed feugiat libero mattis. Fusce ultrices, turpis non hendrerit cursus, odio diam dignissim quam, id sollicitudin neque diam ut nibh. Maecenas consequat neque lectus, sed fringilla lacus dignissim a. In hac habitasse platea dictumst. Suspendisse quam lectus, faucibus et ligula non, bibendum tristique nisl. In tincidunt pretium dolor eu tincidunt. Etiam mattis enim dolor, at fringilla enim elementum id. Donec imperdiet quam arcu, et imperdiet tellus imperdiet bibendum. Donec semper nisl nec urna pharetra, quis gravida enim efficitur.
+		<p>Vivamus mattis est eget dolor sagittis tristique. Aliquam condimentum urna vel augue varius, non ultricies leo fringilla. Donec placerat a lorem eget feugiat. Nulla eros dui, lobortis eu turpis vel, venenatis bibendum augue. Donec ut ante ut ex semper imperdiet. Suspendisse potenti. Nullam dignissim elit at urna accumsan auctor. Integer malesuada odio leo, nec congue elit volutpat non. Fusce libero felis, vehicula at iaculis eu, volutpat ac justo. In tincidunt hendrerit massa, sed ornare dui finibus quis. Duis blandit bibendum leo id luctus. In sit amet velit et ante semper eleifend eu quis mauris. Nam nulla est, dictum ut felis in, suscipit iaculis libero.</p>
+
+</p>
+	</div>
+</div>
