first commit with Spectral theme

--- a/index.html
+++ b/index.html
@@ -1,16 +1,107 @@
 ---
-layout: default
-title: Home
+layout: landing
 ---
+				<!-- Banner -->
+					<section id="banner">
+						<div class="inner">
+							<h2>{{ site.title }}</h2>
+							<p>{{ site.description | markdownify }}</p>
+							<ul class="actions">
+								<li><a href="#" class="button special">Activate</a></li>
+							</ul>
+						</div>
+						<a href="#one" class="more scrolly">Learn More</a>
+					</section>
 
-<div class="row">
-	<div class="col-md-12">
-		<h1>Hi there, I'm Eugenio Felix!</h1>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vitae placerat dui. Vestibulum pharetra vitae enim et accumsan. Nam pharetra tristique ipsum, nec rutrum diam. Fusce convallis mi quis tellus luctus, sed feugiat libero mattis. Fusce ultrices, turpis non hendrerit cursus, odio diam dignissim quam, id sollicitudin neque diam ut nibh. Maecenas consequat neque lectus, sed fringilla lacus dignissim a. In hac habitasse platea dictumst. Suspendisse quam lectus, faucibus et ligula non, bibendum tristique nisl. In tincidunt pretium dolor eu tincidunt. Etiam mattis enim dolor, at fringilla enim elementum id. Donec imperdiet quam arcu, et imperdiet tellus imperdiet bibendum. Donec semper nisl nec urna pharetra, quis gravida enim efficitur.
-		<p>Vivamus mattis est eget dolor sagittis tristique. Aliquam condimentum urna vel augue varius, non ultricies leo fringilla. Donec placerat a lorem eget feugiat. Nulla eros dui, lobortis eu turpis vel, venenatis bibendum augue. Donec ut ante ut ex semper imperdiet. Suspendisse potenti. Nullam dignissim elit at urna accumsan auctor. Integer malesuada odio leo, nec congue elit volutpat non. Fusce libero felis, vehicula at iaculis eu, volutpat ac justo. In tincidunt hendrerit massa, sed ornare dui finibus quis. Duis blandit bibendum leo id luctus. In sit amet velit et ante semper eleifend eu quis mauris. Nam nulla est, dictum ut felis in, suscipit iaculis libero.</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vitae placerat dui. Vestibulum pharetra vitae enim et accumsan. Nam pharetra tristique ipsum, nec rutrum diam. Fusce convallis mi quis tellus luctus, sed feugiat libero mattis. Fusce ultrices, turpis non hendrerit cursus, odio diam dignissim quam, id sollicitudin neque diam ut nibh. Maecenas consequat neque lectus, sed fringilla lacus dignissim a. In hac habitasse platea dictumst. Suspendisse quam lectus, faucibus et ligula non, bibendum tristique nisl. In tincidunt pretium dolor eu tincidunt. Etiam mattis enim dolor, at fringilla enim elementum id. Donec imperdiet quam arcu, et imperdiet tellus imperdiet bibendum. Donec semper nisl nec urna pharetra, quis gravida enim efficitur.
-		<p>Vivamus mattis est eget dolor sagittis tristique. Aliquam condimentum urna vel augue varius, non ultricies leo fringilla. Donec placerat a lorem eget feugiat. Nulla eros dui, lobortis eu turpis vel, venenatis bibendum augue. Donec ut ante ut ex semper imperdiet. Suspendisse potenti. Nullam dignissim elit at urna accumsan auctor. Integer malesuada odio leo, nec congue elit volutpat non. Fusce libero felis, vehicula at iaculis eu, volutpat ac justo. In tincidunt hendrerit massa, sed ornare dui finibus quis. Duis blandit bibendum leo id luctus. In sit amet velit et ante semper eleifend eu quis mauris. Nam nulla est, dictum ut felis in, suscipit iaculis libero.</p>
+				<!-- One -->
+					<section id="one" class="wrapper style1 special">
+						<div class="inner">
+							<header class="major">
+								<h2>Arcu aliquet vel lobortis ata nisl<br />
+								eget augue amet aliquet nisl cep donec</h2>
+								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
+								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+							</header>
+							<ul class="icons major">
+								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
+								<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
+								<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
+							</ul>
+						</div>
+					</section>
 
-</p>
-	</div>
-</div>
+				<!-- Two -->
+					<section id="two" class="wrapper alt style2">
+						<section class="spotlight">
+							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
+								<h2>Magna primis lobortis<br />
+								sed ullamcorper</h2>
+								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
+								<h2>Tortor dolore feugiat<br />
+								elementum magna</h2>
+								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
+								<h2>Augue eleifend aliquet<br />
+								sed condimentum</h2>
+								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							</div>
+						</section>
+					</section>
+
+				<!-- Three -->
+					<section id="three" class="wrapper style3 special">
+						<div class="inner">
+							<header class="major">
+								<h2>Accumsan mus tortor nunc aliquet</h2>
+								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
+								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+							</header>
+							<ul class="features">
+								<li class="icon fa-paper-plane-o">
+									<h3>Arcu accumsan</h3>
+									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								</li>
+								<li class="icon fa-laptop">
+									<h3>Ac Augue Eget</h3>
+									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								</li>
+								<li class="icon fa-code">
+									<h3>Mus Scelerisque</h3>
+									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								</li>
+								<li class="icon fa-headphones">
+									<h3>Mauris Imperdiet</h3>
+									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								</li>
+								<li class="icon fa-heart-o">
+									<h3>Aenean Primis</h3>
+									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								</li>
+								<li class="icon fa-flag-o">
+									<h3>Tortor Ut</h3>
+									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								</li>
+							</ul>
+						</div>
+					</section>
+
+				<!-- CTA -->
+					<section id="cta" class="wrapper style4">
+						<div class="inner">
+							<header>
+								<h2>Arcue ut vel commodo</h2>
+								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+							</header>
+							<ul class="actions vertical">
+								<li><a href="#" class="button fit special">Activate</a></li>
+								<li><a href="#" class="button fit">Learn More</a></li>
+							</ul>
+						</div>
+					</section>
