--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@ layout: landing
 								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
 							</header>
 							<ul class="icons major">
-								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
+								<li><span class="icon fa-code major style1"><span class="label">Lorem</span></span></li>
+								<li><span class="icon fa-lightbulb-o major style2"><span class="label">Ipsum</span></span></li>
+								<li><span class="icon fa-pencil major style3"><span class="label">Dolor</span></span></li>
 							</ul>
 						</div>
 					</section>
