--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@ layout: landing
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>I am a front-end developer and<br>graphic designer from El Paso, Texas.</h2>
+								<p><a href="/about.html">View resumé <i class="fa fa-long-arrow-right"></i></a></p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-code major style1"><span class="label">Lorem</span></span></li>
@@ -30,30 +28,40 @@ layout: landing
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/cuadro.jpg" alt="" /></div><div class="content">
+								<h2>CUADRO Exhibition<br>Poster Series</h2>
+								<p>Series of posters designed to advertise three different events taking place in the temporary art laboratory called Cuadro.</p>
+								<a href="https://www.behance.net/gallery/25969379/CUADRO-Exhibition-Poster-Series" target="_blank">See project on Behance <i class="fa fa-long-arrow-right"></i></a>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/longhorn.jpg" alt="" /></div><div class="content">
+								<h2>Longhorn Distributing</h2>
+								<p>eCommerce website built on Shopify.</p>
+								<a href="https://www.behance.net/gallery/34414951/Longhorn-Distributing" target="_blank">See project on Behance <i class="fa fa-long-arrow-right"></i></a>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/olympic.jpg" alt="" /></div><div class="content">
+								<h2>History of Graphic Design<br>in the Olympic Games</h2>
+								<p>Informational booklet designed to give some insight into graphic design history in the modern Olympic Games, focusing on Tokyo 64, Mexico City 68, Munich 72, Barcelona 92, and Rio 2016.</p>
+								<a href="https://www.behance.net/gallery/26931043/History-of-Graphic-Design-in-the-Olympic-Games-Booklet" target="_blank">See project on Behance <i class="fa fa-long-arrow-right"></i></a>
 							</div>
 						</section>
 					</section>
 
+				<!-- Subscribe -->
+					<section id="one" class="wrapper style1 special">
+						<div class="inner">
+							<header class="major">
+								<h2>Subscribe to receive more information</h2>
+							</header>
+							<iframe src="https://madmimi.com/signups/192145/iframe" scrolling="no" frameborder="0" height="186" style="max-width: 400px; width: 100%;"></iframe>
+						</div>
+					</section>
+
 				<!-- Three -->
-					<section id="three" class="wrapper style3 special">
+					<!-- <section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
 								<h2>Accumsan mus tortor nunc aliquet</h2>
@@ -87,10 +95,10 @@ layout: landing
 								</li>
 							</ul>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- CTA -->
-					<section id="cta" class="wrapper style4">
+					<!-- <section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
 								<h2>Arcue ut vel commodo</h2>
@@ -101,4 +109,4 @@ layout: landing
 								<li><a href="#" class="button fit">Learn More</a></li>
 							</ul>
 						</div>
-					</section>
+					</section> -->
