--- a/resume.html
+++ b/resume.html
@@ -2,10 +2,41 @@
 layout: page
 title: Resumé
 ---
-	<h3>Lorem ipsum dolor</h3>
-	<p>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo, tempus sed finibus eget, fringilla quis risus. Maecenas et lorem quis sem varius sagittis et a est. Maecenas iaculis iaculis sem. Donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien.</p>
-	<p>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec dui cursus, posuere dui eget interdum. Fusce lectus magna, sagittis at facilisis vitae, pellentesque at etiam. Quisque posuere leo quis sem commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius.</p>
-	<hr />
-	<h4>Feugiat aliquam</h4>
-	<p>Nam sapien ante, varius in pulvinar vitae, rhoncus id massa. Donec varius ex in mauris ornare, eget euismod urna egestas. Etiam lacinia tempor ipsum, sodales porttitor justo. Aliquam dolor quam, semper in tortor eu, volutpat efficitur quam. Fusce nec fermentum nisl. Aenean erat diam, tempus aliquet erat.</p>
-	<p>Etiam iaculis nulla ipsum, et pharetra libero rhoncus ut. Phasellus rutrum cursus velit, eget condimentum nunc blandit vel. In at pulvinar lectus. Morbi diam ante, vulputate et imperdiet eget, fermentum non dolor. Ut eleifend sagittis tincidunt. Sed viverra commodo mi, ac rhoncus justo. Duis neque ligula, elementum ut enim vel, posuere finibus justo. Vivamus facilisis maximus nibh quis pulvinar. Quisque hendrerit in ipsum id tellus facilisis fermentum. Proin mauris dui, at vestibulum sit amet, auctor bibendum neque.</p>
+
+	<section id="three" class="wrapper style3 special" style="background-color: #ffffff; color: #393939;">
+		<div class="inner">
+			<header class="major">
+				<h2>Eugenio Felix</h2>
+				<p>Organized front-end developer and graphic designer with a strong awareness of deadlines with more than three years of experience in both graphic design and front-end web development. Eager to keep informed and up to date with the latest tools and technologies.</p>
+			</header>
+			<ul class="features">
+				<li class="icon fa-code" style="width: 100%;">
+					<h3>Experience</h3>
+					<h5>Bright Sol Tech</h5>
+					<h6>FRONT-END DEVELOPER | EL PASO, TX | FEBRUARY 2014 - Present</h6>
+					<p>Involved in the design and front-end development of websites and web applications for a variety of local and national clients across different industries, using different web platforms and languages. Involved in creating graphic design materials for startup companies as well as redesign of existing logos and marketing materials. Involved in administrative tasks such as project maintenance and technical support for internal matters and client support.</p>
+					<hr>
+					<h5>The University of Texas at El Paso - CENTER FOR ARTS AND SCIENCES EDUCATION</h5>
+					<h6>GRAPHIC & WEB DESIGNER | EL PASO, TX | SEPTEMBER 2011 - DECEMBER 2012</h6>
+					<p>Involved in the design of conference programs, posters, brochures, and other design materials including a magazine distributed among a number of universities in the state of Texas. Also responsible for creating, maintaining and updating a number of websites including Joomla-based and static HTML & CSS websites.</p>
+					<hr>
+					<h5>The University of Texas at El Paso - LACIT COMPUTER LAB</h5>
+					<h6>GRAPHIC & WEB DESIGNER | EL PASO, TX | JAN. 2011 - AUG. 2011 & JAN. 2013 - FEB. 2014</h6>
+					<p>Assisted students in using the lab equipment, including hardware and software. Provided assistance to professors with web and print projects. Designed a number of internal design materials for various events and signage.</p>
+				</li>
+				<li class="icon fa-graduation-cap" style="width: 100%;">
+					<h3>EDUCATION</h3>
+					<p>The University of Texas at El Paso<br>Bachelor of Arts in Graphic Design, 2015</p>
+				</li>
+				<li class="icon fa-gear" style="width: 100%;">
+					<h3>SKILLS</h3>
+					<p>Proficiency in Windows and Mac operating systems</p>
+					<p>HTML5 and CSS3</p>
+					<p>CMS and eCommerce platforms (Wordpress, Shopify, Joomla)</p>
+					<p>Adobe Software CS2 - CC (Illustrator, Photoshop, Dreamweaver, InDesign)</p>
+					<p>Microsoft Office 2003 - 2015</p>
+					<p>Spanish (native), English (15 years), Portuguese (2 years)</p>
+				</li>
+			</ul>
+		</div>
+	</section>
