--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ layout: landing
 						<section class="spotlight">
 							<div class="image"><img src="images/longhorn.jpg" alt="" /></div><div class="content">
 								<h2>Longhorn Distributing</h2>
-								<p>eCommerce website built on Shopify.</p>
+								<p>eCommerce website using Shopify, built in collaboration.</p>
 								<a href="https://www.behance.net/gallery/34414951/Longhorn-Distributing" target="_blank">See project on Behance <i class="fa fa-long-arrow-right"></i></a>
 							</div>
 						</section>
