change resume link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: landing
 						<div class="inner">
 							<header class="major">
 								<h2>I am a front-end developer and<br>graphic designer from El Paso, Texas.</h2>
-								<p><a href="/about.html">View resumé <i class="fa fa-long-arrow-right"></i></a></p>
+								<p><a href="/resume.html">View resumé <i class="fa fa-long-arrow-right"></i></a></p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-code major style1"><span class="label">Lorem</span></span></li>
